<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ai_styles_choose_Activity"
    android:background="@mipmap/ai_styles_background"

    >

    <android.support.constraint.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.71" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@mipmap/ai_styles_top"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/ai_design"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"/>


    <TextView
        android:layout_width="24dp"
        android:layout_height="0dp"
        android:id="@+id/ai_styles_choose_back"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline16"
        android:text="@string/ai_styles_word_show"
        android:textColor="#000000"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@mipmap/ai_styles_juxing"
        app:layout_constraintBottom_toTopOf="@+id/guideline17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toTopOf="@+id/guideline18"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="正式"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_weight="2"/>

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@mipmap/ai_styles_choose_gray"
                android:progressDrawable="@drawable/seekbar_progress"
                android:thumb="@mipmap/ai_styles_circle" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="休闲"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_weight="2"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="儒雅"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_weight="2"/>

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:thumb="@mipmap/ai_styles_circle"
                android:background="@mipmap/ai_styles_choose_green"
                android:layout_weight="4"
                android:progressDrawable="@drawable/seekbar_progress"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="粗犷"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="简约"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_weight="2"/>

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:thumb="@mipmap/ai_styles_circle"
                android:background="@mipmap/ai_styles_choose_black"
                android:layout_weight="4"
                android:progressDrawable="@drawable/seekbar_progress"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="复杂"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="复古"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_weight="2"/>

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:thumb="@mipmap/ai_styles_circle"
                android:background="@mipmap/ai_styles_choose_white"
                android:layout_weight="4"
                android:progressDrawable="@drawable/seekbar_progress"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="现代"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_weight="2"/>
        </LinearLayout>
        
        
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline17"
        android:text="@string/ai_styles_tips"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/ai_styles_next"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline19"
        android:background="@mipmap/ai_styles_next"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>



</android.support.constraint.ConstraintLayout>